--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -153,3 +153,11 @@
 .btn-social .fa-lg {
     font-size: 2em;
 }
+.parrafo-team{
+	padding-top: 3%;
+    padding-bottom: 15%;
+}
+.logos-team{
+	background: #fff;
+	width: 100%;
+}
