--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -130,7 +130,7 @@
 .aling-right img {
     border: 10px solid #f1f1f1;
     border-radius: 100%;
-    width: 20%;
+    width: 25%;
 }
 .circle-text{
 	border-radius: 100%;
@@ -158,6 +158,5 @@
     padding-bottom: 15%;
 }
 .logos-team{
-	background: #fff;
-	width: 100%;
+	padding: 30px 0;
 }
